# react-native-speech

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  MIGRATION.md  README.md  RNSpeech.podspec  eslint.config.mjs  package.json  tsconfig.build.json  tsconfig.json
.agents/specs/tests/: kokoro.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: release.yml
android/: build.gradle
android/src/main/cpp/: .clangd  CMakeLists.txt  espeak_wrapper.cpp  espeak_wrapper.h  native_dict_jni.cpp
benchmarks/: schema.json
cpp/: .clangd  native_dict.cpp  native_dict.h
cpp/tests/: README.md  fuzz_native_dict.cpp
docs/: ARCHITECTURE.md  KOKORO_REFACTORING_PLAN.md  LICENSES.md  MLX_KOKORO_IMPLEMENTATION.md  PHONEMIZATION.md  USAGE.md
example/: package.json
example/ios/: Podfile
example/ios/SpeechExample/: RNBenchmark.mm
example/ios/SpeechExample.xcodeproj/: project.pbxproj
example/ios/SpeechExampleTests/: EspeakWrapperTests.m  SpeechExampleTests.m
example/patches/: onnxruntime-react-native+1.24.3.patch
example/src/: App.tsx
example/src/benchmark/: BenchmarkLogger.ts  BenchmarkRunner.ts  NativeBenchmark.ts  index.ts  types.ts
example/src/components/: Button.tsx  ScanlineOverlay.tsx
example/src/hooks/: useTypewriter.ts
example/src/styles/: cyber.ts  gs.ts
example/src/utils/: KittenModelManager.ts  ModelManager.ts  PhonemizerDictManager.ts  PocketModelManager.ts  SupertonicModelManager.ts  sampleText.ts  wavWriter.ts
example/src/views/: BenchmarkView.tsx  KokoroExample.tsx  RootView.tsx  StreamingView.tsx
ios/: EspeakWrapper.h  EspeakWrapper.mm  NativeDictWrapper.h  NativeDictWrapper.mm  RNSpeech.h  RNSpeech.mm  RNSpeechTrace.h  RNSpeechTrace.mm  espeak-config.h  espeak-ng
scripts/: README.md  benchmark-android.sh  benchmark-compare.py  benchmark-ios.sh  benchmark-run.sh  build-dict.mjs  build-espeak-android.sh  build-espeak-ios-framework.sh  build-espeak-ios-lib.sh  build-espeak-ios.sh  build-espeak-xcframework.sh  capture-markdown-baseline.mjs  compile-espeak-data.sh  convert-kitten-voices.py  extract-trace-table.py  prepare-espeak-data.sh  setup-espeak.sh  test-android.sh  test-ios.sh  validate-dict.mjs  verify-supertonic-multilingual.ts
scripts/lib/: multilingual-test-sentences.ts  supertonic-node.ts  wav.ts
src/: NativeAudioPlayer.ts  NativeSpeech.ts  Speech.ts  SpeechEnhanced.ts  index.tsx
src/__tests__/: KokoroEngine.test.ts  index.test.tsx
src/__tests__/__fixtures__/: markdown-baseline.after-fix.json  markdown-baseline.before-fix.json
src/engines/: EngineManager.ts  EngineStreamSession.ts  NeuralAudioPlayer.ts  OSEngine.ts  SpeechStream.ts  StreamingChunker.ts
src/engines/__tests__/: EngineStreamSession.test.ts  SpeechStream.test.ts  StreamingChunker.test.ts
src/engines/kitten/: IPATokenizer.ts  KittenEngine.ts  VoiceLoader.ts  chunkTextWithPositions.ts  constants.ts  index.ts  splitOversized.ts
src/engines/kitten/__tests__/: KittenEngine.test.ts  chunkTextWithPositions.test.ts  splitOversized.test.ts
src/engines/kokoro/: BPETokenizer.ts  JsIpaPhonemizer.ts  JsPhonemizer.ts  KokoroEngine.ts  Phonemizer.ts  TextNormalizer.ts  VoiceLoader.ts  constants.ts  index.ts
src/engines/kokoro/__tests__/: BPETokenizer.test.ts  JsPhonemizer.test.ts  KokoroEngine.phonemes.test.ts  KokoroEngine.test.ts  Phonemizer.test.ts  TextNormalizer.test.ts
src/engines/kokoro/utils/: AssetLoader.ts
src/engines/pocket/: PocketEngine.ts  PocketInference.ts  SentencePieceTokenizer.ts  VoiceEmbeddingLoader.ts  constants.ts  index.ts
src/engines/supertonic/: StyleLoader.ts  SupertonicEngine.ts  SupertonicInference.ts  UnicodeProcessor.ts  VoicePresetLoader.ts  constants.ts  index.ts
src/engines/supertonic/__tests__/: SupertonicEngine.test.ts  UnicodeProcessor.test.ts
src/engines/supertonic/utils/: AssetLoader.ts  TextChunker.ts  logger.ts
src/phonemization/: DictSource.ts  HansPhonemizer.ts  JsDictSource.ts  KittenPreprocessor.ts  NativeDictSource.ts  dict.ts  index.ts  splitCamelCase.ts
src/phonemization/__tests__/: HansPhonemizer.hermes-debug.test.ts  HansPhonemizer.no-hans00.test.ts  HansPhonemizer.test.ts  camelCase.integration.test.ts  interjection-corpus.hans00.test.ts  interjection-corpus.no-hans00.test.ts  interjection-corpus.shared.ts  splitCamelCase.test.ts
src/phonemization/__tests__/fixtures/: dict-subset.json  (+1 more)
src/types/: Engine.ts  Kitten.ts  Kokoro.ts  OnnxRuntime.ts  Pocket.ts  Supertonic.ts  index.ts  react-native-fs.d.ts
src/utils/: AssetLoader.ts  AudioConverter.ts  TextChunker.ts  index.ts  logger.ts  stripMarkdown.ts  utf8.ts
src/utils/__tests__/: stripMarkdown.test.ts  utf8.test.ts
(+17 files in other folders)
